updates photography page and fixes a bug where the outercontainer was set to flex row and no height was set (small pages would not fit the page height)

--- a/public/styles.css
+++ b/public/styles.css
@@ -340,10 +340,11 @@ table {
 }
 .outerContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin-top: -6.5vh;
   background-color: rgba(48, 48, 48, 0.896);
-  width: auto;
+  width: 100%;
+  height: 100vh;
 }
 .dataContainer {
   display: flex;
